# console-chatbot

./: .env.example  .gitignore  LICENSE  README.md  chat-docs.py  chatbot.py  pyproject.toml  requirements.txt  telegram.py
